--- a/homeworks/week5/talipweb/package.json
+++ b/homeworks/week5/talipweb/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello",
+  "name": "a_website",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "mocha": "^5.0.1",
     "nunjucks": "^3.0.1"
   }
 }
